--- a/data/items.cfg
+++ b/data/items.cfg
@@ -1,11 +1,23 @@
 [basic-cps]
 name=Basic CPS
 description=Basic clicks-per-second upgrade
-price=5
-cps=0.2
+price=10
+cps=0.1
 
 [basic-cpc]
 name=Basic CPC
 description=Basic increase in click power
 price=5
 cpc=0.8
+
+[complex-cps]
+name=Complex CPS
+description=More expensive, but more powerful!
+price=200
+cps=15
+
+[complex-cpc]
+name=Complex CPC
+description=Get more clicks for your click!
+price=180
+cpc=35
